Placeholder for url

--- a/src/main/webapp/public/index.html
+++ b/src/main/webapp/public/index.html
@@ -23,12 +23,12 @@
   <body role="document">
 
     <div class="container" role="main">
-      <h1>Finn bilder p&aring; en web-side...</h1>
+      <h1>Finn bilder...</h1>
 
       <form role="form">
         <div class="input-group input-group-lg">
-          <span class="input-group-addon">url (eks. http://mesan.no):</span>
-          <input name="url" class="form-control">
+          <span class="input-group-addon">url:</span>
+          <input name="url" class="form-control" placeholder="http://mesan.no">
         </div>
         <div id="debug"></div>
       </form>
